...
    'Paris',
    'Jakarta',
    'Manila',
    'Cape Town',
    'Berlin',
    'Rome',
    'Toronto',
    'Nairobi',
    'Chicago',
    'Mumbai',
    'Shanghai',
    'Istanbul',
    'Dhaka',
...
  Widget build(BuildContext context) {
    return Scaffold(
      extendBodyBehindAppBar: true,
      appBar: AppBar(
        backgroundColor: Colors.cyan[800],
        elevation: 0,
        title: Text('Select Cities', style: TextStyle(color: Colors.white)),
      ),
      body: Stack(
        children: [
          Container(
            decoration: BoxDecoration(
              image: DecorationImage(
...
